--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "run_me",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
-  "description": "A Typescript library to quickly identify a task to run for a given file and line number",
+  "description": "A command to quickly identify a task to run for a given file and line number",
   "scripts": {
     "test": "NODE_ENV=test mocha --require spec/setup.js --require ts-node/register",
     "testAll": "NODE_ENV=test mocha --require spec/setup.js --require ts-node/register 'spec/**/*.spec.ts*'"
